<resources>
    <string name="app_name">Shopping</string>

    <!-- LOGIN -->
    <string name="txt_login">Đăng nhập</string>
    <string name="txt_username">Tên đăng nhập</string>
    <string name="txt_lastname">Họ</string>
    <string name="txt_firstname">Tên</string>
    <string name="txt_password">Mật khẩu</string>

    <!-- REGISTER -->
    <string name="txt_createAccount">Đăng ký</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_repassword">Nhập lại mật khẩu</string>
    <string name="txt_phone">Số điện thoại</string>

    <string name="txt_purchase">Mua hàng</string>
    <string name="txt_sell">Bán hàng</string>

    <string name="txt_homepage">Trang chủ</string>
    <string name="txt_category">Danh mục</string>
    <string name="txt_profile">Cá nhân</string>

    <string-array name="array_sex">
        <item>Nam</item>
        <item>Nữ</item>
        <item>Khác</item>
    </string-array>

    <string-array name="array_typeOfAccount">
        <item>Mua hàng</item>
        <item>Bán hàng</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_product">Quản lý sản phẩm</string>

</resources>